--- a/lab-dan/package.json
+++ b/lab-dan/package.json
@@ -20,5 +20,9 @@
     "gulp-mocha": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "bluebird": "^3.4.6",
+    "node-uuid": "^1.4.7"
   }
 }
