--- a/lab-michael/package.json
+++ b/lab-michael/package.json
@@ -10,13 +10,21 @@
     "test": "mocha",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/silvershotm1/lab-08-single-resource-api.git"
+  },
   "author": "Michael Bishop",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.11.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "node-uuid": "1.4.7"
   }
 }
