--- a/lab-geoff/package.json
+++ b/lab-geoff/package.json
@@ -11,5 +11,9 @@
     "start": "node server.js"
   },
   "author": "geoffrey-cox",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "node-uuid": "^1.4.7"
+  }
 }
