--- a/lab-dan/.eslintrc
+++ b/lab-dan/.eslintrc
@@ -4,7 +4,7 @@
     "no-console": "off",
     "indent": [ "error", 2 ],
     "quotes": [ "error", "single" ],
-    "semi": ["error", "always"],
+    "semi": ["error", "never"],
     "linebreak-style": [ "error", "unix" ]
   },
   "env": {
