--- a/lab-carolina/package.json
+++ b/lab-carolina/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/cejac/lab-08-single-resource-api/issues"
   },
-  "homepage": "https://github.com/cejac/lab-08-single-resource-api#readme"
+  "homepage": "https://github.com/cejac/lab-08-single-resource-api#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.7"
+  }
 }
