--- a/lab-carolina/package.json
+++ b/lab-carolina/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/cejac/lab-08-single-resource-api#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1"
   },
   "dependencies": {
     "node-uuid": "^1.4.7"
