--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -22,5 +22,9 @@
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.4.6",
+    "node-uuid": "^1.4.7"
   }
 }
