--- a/lab-jessica/package.json
+++ b/lab-jessica/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/jessicamvs/lab-08-single-resource-api#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "superagent": "^3.1.0"
   },
   "dependencies": {
     "bluebird": "^3.4.6",
