--- a/lab-geoff/package.json
+++ b/lab-geoff/package.json
@@ -13,6 +13,7 @@
   "author": "geoffrey-cox",
   "license": "ISC",
   "devDependencies": {
+    "bluebird": "^3.4.6",
     "mocha": "^3.2.0",
     "node-uuid": "^1.4.7"
   }
