--- a/lab-geoff/package.json
+++ b/lab-geoff/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "bluebird": "^3.4.6",
+    "chai": "^3.5.0",
     "mocha": "^3.2.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "superagent": "^3.2.1"
   }
 }
