--- a/lab-carolina/package.json
+++ b/lab-carolina/package.json
@@ -24,6 +24,7 @@
     "superagent": "^3.2.1"
   },
   "dependencies": {
+    "bluebird": "^3.4.6",
     "chai": "^3.5.0",
     "node-uuid": "^1.4.7"
   }
