--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/jurrish/lab-08-single-resource-api#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "node-uuid": "^1.4.7"
   }
 }
