--- a/lab-dan/package.json
+++ b/lab-dan/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "NODE_ENV=development node index.js"
   },
   "author": "Dan Peters",
   "license": "ISC",
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "bluebird": "^3.4.6",
+    "del": "^2.2.2",
+    "mkdirp": "^0.5.1",
     "node-uuid": "^1.4.7"
   }
 }
