--- a/lab08-jacob/package.json
+++ b/lab08-jacob/package.json
@@ -12,6 +12,8 @@
     "chai": "^3.5.0",
     "eslint": "^3.11.1",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
     "mocha": "^3.2.0",
     "superagent": "^3.2.0"
   },
