--- a/lab-geoff/package.json
+++ b/lab-geoff/package.json
@@ -18,5 +18,9 @@
     "mocha": "^3.2.0",
     "node-uuid": "^1.4.7",
     "superagent": "^3.2.1"
+  },
+  "dependencies": {
+    "del": "^2.2.2",
+    "mkdirp": "^0.5.1"
   }
 }
