--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -22,7 +22,8 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "superagent": "^3.2.1"
   },
   "dependencies": {
     "bluebird": "^3.4.6",
