files write now!

--- a/lab-michael/package.json
+++ b/lab-michael/package.json
@@ -23,9 +23,13 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
-    "mocha": "^3.2.0"
+    "mkdir-bluebird": "^1.0.14",
+    "mocha": "^3.2.0",
+    "superagent": "^3.3.0"
   },
   "dependencies": {
+    "mkdir": "0.0.2",
+    "mkdir-bluebird": "^1.0.14",
     "node-uuid": "^1.4.7"
   }
 }
