--- a/lab-08-jr/package.json
+++ b/lab-08-jr/package.json
@@ -22,5 +22,12 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "node-uuid": "^1.4.7"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "superagent": "^3.3.1"
   }
 }
